agregado btn comprobante

--- a/index.html
+++ b/index.html
@@ -137,6 +137,17 @@
         alt="alias para tarjeta"
         width="330px"
       />
+      <a
+        href="https://wa.me/5493364373372"
+        data-aos="zoom-in"
+        data-aos-duration="1300"
+      >
+        <img
+          src="./img/btn-enviar-comprobante.png"
+          alt="boton enviar comprobante"
+          width="250px"
+        />
+      </a>
     </section>
 
     <section class="dress-code">
