--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <h3 data-aos="fade-right" data-aos-delay="500" data-aos-duration="1300">
           Ceremonia <br />& fiesta
         </h3>
-        <p data-aos="zoom-out" data-aos-duration="1300">
+        <p data-aos="zoom-in" data-aos-duration="1300">
           CELEBRAMOS JUNTOS <br />
           EN EL SALÓN "EL CARRUAJE"
         </p>
