--- a/index.html
+++ b/index.html
@@ -125,7 +125,14 @@
         data-aos-duration="1300"
       />
       <h2 data-aos="fade-right" data-aos-duration="1300">$62.000</h2>
-      <p data-aos="zoom-in" data-aos-duration="1300">
+      <p data-aos="zoom-in" data-aos-duration="1300">ADULTOS</p>
+      <h2 data-aos="fade-right" data-aos-duration="1300">$31.000</h2>
+      <p data-aos="zoom-in" data-aos-duration="1300">MENORES DE 2 A 10 AÑOS</p>
+      <p
+        data-aos="zoom-in"
+        data-aos-duration="1300"
+        class="valor__validez-tarjeta"
+      >
         (VÁLIDO HASTA EL 25 DE SEPTIEMBRE, <br />
         LUEGO PUEDE SUFRIR UN AUMENTO)
       </p>
