fecha limite establecida

--- a/index.html
+++ b/index.html
@@ -225,6 +225,10 @@
             alt=""
             width="260px"
         /></a>
+        <p data-aos="zoom-in" data-aos-duration="1300">
+          ¡TENÉS TIEMPO DE SER PARTE HASTA <br />
+          EL 10 DE NOVIEMBRE, TE ESPERAMOS!
+        </p>
       </div>
     </section>
 
